Fixing horizontal scroll bar styles

--- a/resources/stylesheet.css
+++ b/resources/stylesheet.css
@@ -70,6 +70,11 @@ QListWidget::item, BlameWidget > QTreeView::item
    max-height: 25px;
 }
 
+WorkInProgressWidget > QListWidget::item
+{
+   padding: 0;
+}
+
 QTreeWidget::item
 {
     min-height: 25px;
@@ -351,8 +356,8 @@ QScrollBar:vertical
 QScrollBar:horizontal
 {
     border: 0;
-    border-left-width: 1px;
-    border-left-style: solid;
+    border-top-width: 1px;
+    border-top-style: solid;
     height: 16px;
     margin: 0 16px 0 16px;
 }
